# path-utils

./: .bumpversion.cfg  README.md  project-words.txt  pyproject.toml
path_utils/: list_executables.py  utils.py
